Implements the widget block

--- a/app/assets/javascripts/templates/management/wysiwyg-sidebar.hbs
+++ b/app/assets/javascripts/templates/management/wysiwyg-sidebar.hbs
@@ -3,8 +3,12 @@
   Expand sidebar
 </button>
 <div class="blocks">
+  <button type="button" class="js-add-widget">
+    <svg width="19" height="15" viewBox="0 0 19 15" xmlns="http://www.w3.org/2000/svg"><path d="M3 13h3V4H3v9zm5 0h3V6H8v7zm5 0h3V0h-3v13zM0 15h19v-1H0v1z" fill="#FFF" fill-rule="evenodd"/></svg>
+    <span>Widget</span>
+  </button>
   <button type="button" class="js-add-image">
-    <svg width="19" height="14" viewBox="0 0 19 14" xmlns="http://www.w3.org/2000/svg"><title>Fill 1</title><path d="M2.375 11.667l4.75-8.391 4.75 5.656 2.375-2.21 2.375 4.945H2.375zm11.281-9.334c.985 0 1.781.784 1.781 1.75s-.796 1.75-1.78 1.75c-.985 0-1.782-.784-1.782-1.75s.797-1.75 1.781-1.75zM0 14h19V0H0v14z" fill="#FFF" fill-rule="evenodd"/></svg>
+    <svg width="19" height="14" viewBox="0 0 19 14" xmlns="http://www.w3.org/2000/svg"><path d="M2.375 11.667l4.75-8.391 4.75 5.656 2.375-2.21 2.375 4.945H2.375zm11.281-9.334c.985 0 1.781.784 1.781 1.75s-.796 1.75-1.78 1.75c-.985 0-1.782-.784-1.782-1.75s.797-1.75 1.781-1.75zM0 14h19V0H0v14z" fill="#FFF" fill-rule="evenodd"/></svg>
     <span>Image</span>
   </button>
 </div>
