--- a/app/views/management/page_steps/preview.html.erb
+++ b/app/views/management/page_steps/preview.html.erb
@@ -61,3 +61,5 @@
   <%= render partial: 'footer', locals: {f: f, always_save: true, no_continue: true, wide: true } %>
 <% end %>
 <%= render partial: 'shared/errors', locals: { resource: @page} %>
+
+<%= console if Rails.env.development?%>
