--- a/app/views/management/page_steps/dataset.html.erb
+++ b/app/views/management/page_steps/dataset.html.erb
@@ -39,7 +39,7 @@
         <% end %>
       </div>
     </div>
-    <%= render partial: 'footer', locals: {f: f} %>
+    <%= render partial: 'footer', locals: {f: f, never_save: true} %>
 <% end %>
 
 <%= render partial: 'shared/errors', locals: { resource: @page } %>
