--- a/app/assets/stylesheets/front/_settings-theme-fa.scss
+++ b/app/assets/stylesheets/front/_settings-theme-fa.scss
@@ -47,6 +47,7 @@ $color-9:  #eceaea;
 $color-10: darken(saturate($color-1, 10%), 5%);
 $color-11: #fff00e;
 $color-12: #dd3e21;
+$color-13: #dededd;
 
 // General layout
 $body-max-width:         1280px;
