--- a/app/views/management/page_steps/_finish_footer.html.erb
+++ b/app/views/management/page_steps/_finish_footer.html.erb
@@ -2,7 +2,7 @@
   <div class="wrapper">
     <%= link_to 'Back to Pages', management_site_site_pages_path(@site.slug), class: 'c-button -outline -dark-text' %>
     <div>
-      <%= f.button (@page.enabled ? 'Unpublish' : 'Publish'), value: Management::PageStepsController::CONTINUE, type: 'submit', class: 'c-button js-submit' %>
+      <%= f.button (@page.enabled ? 'Unpublish' : 'Publish'), value: Management::PageStepsController::PUBLISH, type: 'submit', class: 'c-button js-submit' %>
     </div>
   </div>
 </div>
