Added the map settings and the graph settings to the preview and front

--- a/app/views/management/page_steps/preview.html.erb
+++ b/app/views/management/page_steps/preview.html.erb
@@ -10,7 +10,7 @@
 
 <%= form_for @page, url: wizard_path, method: :put do |f| %>
   <input type="hidden" type="text" name="site_page[dataset_setting][default_graphs]" value="" class="js-charts-input" />
-  <input type="hidden" type="text" name="site_page[dataset_setting][default_maps]" value="" class="js-map-input" />
+  <input type="hidden" type="text" name="site_page[dataset_setting][default_map]" value="" class="js-map-input" />
   <div class="l-page-creation -dashboard-preview">
     <div class="l-analysis-dashboard">
       <div class="main-container">
