--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://cdn.quilljs.com/1.1.6/quill.core.css">
   <%= stylesheet_link_tag 'front/application-theme-fa', media: 'all', 'data-turbolinks-track': 'reload' if @site_page.site_template.name.eql? 'Forest Atlas' %>
   <%= stylesheet_link_tag 'front/application-theme-lsa', media: 'all', 'data-turbolinks-track': 'reload' if @site_page.site_template.name.eql? 'Landscape Application' %>
+  <%= favicon_link_tag %>
   <%= yield :head %>
 </head>
 
