Added 'Show on menu' button and removed hidden pages from the structure tree

--- a/app/views/management/page_steps/title.html.erb
+++ b/app/views/management/page_steps/title.html.erb
@@ -23,6 +23,8 @@
         <%= f.text_area :description, placeholder: 'Description' %>
         <%= f.label :uri %>
         <%= f.text_field :uri, placeholder: 'URI' %>
+        <%= f.label 'Show on navigation bar' %>
+        <%= f.check_box :show_on_menu %>
       </div>
     </div>
   </div>
