--- a/app/views/management/steps_shared/_footer.html.erb
+++ b/app/views/management/steps_shared/_footer.html.erb
@@ -3,7 +3,7 @@
     <%= link_to 'Cancel', management_site_site_pages_path(@site.slug), class: 'c-button -outline -dark-text' %>
     <div>
       <% unless local_assigns[:no_continue] %>
-        <%= f.button Management::PageStepsController::CONTINUE, value: Management::PageStepsController::CONTINUE, type: 'submit', class: 'c-button js-submit' + ((@page.id || local_assigns[:always_save]) ? ' -outline -dark-text' : '') %>
+        <%= f.button Management::PageStepsController::CONTINUE, value: Management::PageStepsController::CONTINUE, type: 'submit', class: 'c-button js-submit' + ((f.object.id || local_assigns[:always_save]) ? ' -outline -dark-text' : '') %>
       <% end %>
       <% if (f.object.id || local_assigns[:always_save]) && (local_assigns[:never_save] != true) %>
         <%= f.button Management::PageStepsController::SAVE, value: Management::PageStepsController::SAVE, type: 'submit', class: 'c-button js-submit' %>
