--- a/app/views/management/dataset_steps/connector.html.erb
+++ b/app/views/management/dataset_steps/connector.html.erb
@@ -16,6 +16,6 @@
        <div class="js-connector"></div>
      </div>
    </div>
-  <%= render partial: 'management/steps_shared/footer', locals: { f: f} %>
+  <%= render partial: 'management/steps_shared/footer', locals: { f: f, cancel: management_site_datasets_path(@site.slug)} %>
 <% end %>
-<%= render partial: 'shared/errors', locals: { resource: @site } %>
+<%= render partial: 'shared/errors', locals: { resource: @dataset } %>
