--- a/app/views/management/steps_shared/_footer.html.erb
+++ b/app/views/management/steps_shared/_footer.html.erb
@@ -1,6 +1,10 @@
 <div class="c-action-bar <%= local_assigns[:wide] ? '-wide' : '' %>">
   <div class="wrapper">
-    <%= link_to 'Cancel', management_site_site_pages_path(@site.slug), class: 'c-button -outline -dark-text' %>
+    <% if local_assigns[:cancel] %>
+      <%= link_to 'Cancel', local_assigns[:cancel], class: 'c-button -outline -dark-text' %>
+  <% else %>
+      <%= link_to 'Cancel', management_site_site_pages_path(@site.slug), class: 'c-button -outline -dark-text' %>
+  <% end %>
     <div>
       <% unless local_assigns[:no_continue] %>
         <%= f.button Management::PageStepsController::CONTINUE, value: Management::PageStepsController::CONTINUE, type: 'submit', class: 'c-button js-submit' + ((f.object.id || local_assigns[:always_save]) ? ' -outline -dark-text' : '') %>
