--- a/app/views/management/datasets/index.html.erb
+++ b/app/views/management/datasets/index.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: 'management/extended_header'%>
+<%= render partial: 'management/extended_header', locals: {type: 'dataset'} %>
 <%= include_gon %>
 <div class="js-tabs"></div>
 
