--- a/app/views/layouts/management.html.erb
+++ b/app/views/layouts/management.html.erb
@@ -8,6 +8,7 @@
   <%= stylesheet_link_tag 'management/application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <script src="//cdn.quilljs.com/1.1.6/quill.js" type="text/javascript"></script>
   <%= javascript_include_tag 'management', 'data-turbolinks-track': 'reload' %>
+  <%= favicon_link_tag %>
 </head>
 <body <%= yield :body_class %>>
   <%= render 'management/header' %>
