--- a/app/views/management/_header.html.erb
+++ b/app/views/management/_header.html.erb
@@ -3,14 +3,20 @@
     <div>
       <div class="site-switcher js-site-switcher"></div>
       <% unless @breadcrumbs.blank? %>
-        <ul class="breadcrumbs">
-          <% @breadcrumbs.each_with_index do |breadcrumb, index| -%>
-              <li><a href="<%= breadcrumb[:url] %>"><%= breadcrumb[:name] %></a></li>
-          <% end %>
-        </ul>
+          <ul class="breadcrumbs">
+            <% @breadcrumbs.each do |breadcrumb| -%>
+                <li>
+                  <% if breadcrumb[:url] -%>
+                      <a href="<%= breadcrumb[:url] %>"><%= breadcrumb[:name] %></a>
+                  <% else %>
+                      <%= breadcrumb[:name] %>
+                  <% end %>
+                </li>
+            <% end %>
+          </ul>
       <% end %>
     </div>
-   <ul class="menu">
+    <ul class="menu">
       <li><%= link_to 'Logout', auth_logout_url, {:method => :post} %></li>
     </ul>
   </div>
