removed blue shadow for focused elements, layout like design

--- a/app/assets/stylesheets/components/management/c-tree-structure.scss
+++ b/app/assets/stylesheets/components/management/c-tree-structure.scss
@@ -207,6 +207,7 @@
     border-radius: 36px;
     background: transparent;
     text-transform: uppercase;
+    cursor: pointer;
 
     &:active {
       color: currentColor;
