--- a/app/views/management/sites/structure.html.erb
+++ b/app/views/management/sites/structure.html.erb
@@ -1,7 +1,11 @@
 <%= render partial: 'management/extended_header'%>
 <%= include_gon %>
 
-<div class="js-tabs"></div>
+<div class="l-tabs">
+  <div class="wrapper">
+    <div class="js-tabs"></div>
+  </div>
+</div>
 
 <div class="l-tree-structure">
   <div class="wrapper">
