--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -17,7 +17,6 @@ body {
 }
 
 body {
-  max-width: $body-max-width;
   color: $color-4;
   font-family: $font-family-1;
   font-size: $font-size-normal;
@@ -51,9 +50,17 @@ input {
   font-family: $font-family-1;
 }
 
+a, button, input, select {
+  &:focus {
+    outline: 0;
+  }
+}
+
 .wrapper {
+  max-width: $body-max-width;
   width: 100%;
   padding: 0 $wrapper-mobile-padding;
+  margin: 0 auto;
 
   @media #{$mq-mobile} {
     padding: 0 $wrapper-tablet-padding;
