--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -22,6 +22,9 @@ body {
   font-size: $font-size-normal;
   font-weight: $font-weight-normal;
 
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
   @media #{$mq-body-width} {
     margin: 0 auto;
   }
