--- a/app/assets/stylesheets/components/shared/c-table.scss
+++ b/app/assets/stylesheets/components/shared/c-table.scss
@@ -1,4 +1,5 @@
-.c-table {
+.c-table,
+.c-table table{
   width: 100%;
   border-spacing: 0;
 
@@ -16,7 +17,9 @@
   }
 
   tr {
-    border-bottom: 1px dashed rgba($color-9, .6);
+    td {
+      border-bottom: 1px dashed rgba($color-9, .6);
+    }
 
     &:hover td {
       background-color: $color-2;
@@ -66,4 +69,9 @@
     }
   }
 
+  > .table-legend {
+    padding: 40px 0;
+    text-align: center;
+  }
 }
+
