Fix link page type

--- a/app/views/management/page_steps/type.html.erb
+++ b/app/views/management/page_steps/type.html.erb
@@ -34,7 +34,7 @@
           </div>
         </div>
         <div class="card -footer-at-bottom">
-          <h3 class="title">External link</h3>
+          <h3 class="title">Link</h3>
           <p class="description">Add a link to appear in the menus.</p>
           <div class="footer">
             <%= button_to 'Create', management_site_page_step_path(@site.slug), method: :put, params: {id: :type, 'site_page[content_type]': ContentType::LINK}, class: 'c-button'  %>
