--- a/app/views/management/page_steps/link.html.erb
+++ b/app/views/management/page_steps/link.html.erb
@@ -2,7 +2,7 @@
     <div class="c-extended-header -high">
       <div class="wrapper">
         <div class="description">
-          <h1>External link</h1>
+          <h1>Link</h1>
           <p>Please give the link the name to appear in the menu.</p>
         </div>
         <div></div>
