Fixes the colors of the table border
Color was to dark.

--- a/app/assets/stylesheets/components/shared/c-table.scss
+++ b/app/assets/stylesheets/components/shared/c-table.scss
@@ -18,7 +18,7 @@
 
   tr {
     td {
-      border-bottom: 1px dashed rgba($color-9, .6);
+      border-bottom: 1px dashed $color-7;
     }
 
     &:hover td {
