--- a/app/views/management/dataset_steps/title.html.erb
+++ b/app/views/management/dataset_steps/title.html.erb
@@ -11,19 +11,14 @@
 <%= Gon::Base.render_data(camel_case: true, camel_depth: 3) %>
 
 <%= form_for @dataset, url: wizard_path, method: :put do |f| %>
-  <div class="l-page-creation -title">
+  <div class="l-dataset-creation -title">
     <div class="wrapper">
-
       <div class="inputs-container">
-        <div class="dataset-title">
-          <%= f.label :title, for: 'title' %>
-          <%= f.text_field :name, id:'name', placeholder: 'Type here the dataset’s title' %>
-        </div>
+        <%= f.label :title, for: 'title' %>
+        <%= f.text_field :name, id:'name', placeholder: 'Dataset’s title' %>
 
-        <div class="dataset-tags">
-          <%= f.label :tags, for: 'tags' %>
-          <%= f.text_field :tags, id:'tags', placeholder: 'Type here the dataset’s tags' %>
-        </div>
+        <%= f.label :tags, for: 'tags' %>
+        <%= f.text_field :tags, id:'tags', placeholder: 'Dataset’s tags' %>
       </div>
 
       <div class="js-tags"></div>
