--- a/app/views/management/dataset_steps/context.html.erb
+++ b/app/views/management/dataset_steps/context.html.erb
@@ -11,12 +11,19 @@
 <%= Gon::Base.render_data(camel_case: true, camel_depth: 3) %>
 
 <%= form_for @dataset, url: wizard_path, method: :put do |f| %>
-  <div class="l-page-creation">
+  <div class="l-dataset-creation -context">
     <div class="wrapper">
-      <% @user_contexts.each do |context|%>
-        <label for="context-<%= context.id%>"><%= context.name%></label>
-        <%= check_box_tag 'dataset[context_ids][]', "#{context.id}", false, id: "context-#{context.id}" %>
-      <% end %>
+      <div class="c-cards-list">
+        <% @user_contexts.each do |context|%>
+          <div class="card -single-data">
+            <label for="context-<%= context.id%>"><%= context.name%></label>
+            <%= check_box_tag 'dataset[context_ids][]', "#{context.id}", false, id: "context-#{context.id}" %>
+            <div class="content">
+              <h3><%= context.name %></h3>
+            </div>
+          </div>
+        <% end %>
+      </div>
     </div>
   </div>
   <%= render partial: 'management/steps_shared/footer', locals: { f: f, cancel: management_site_datasets_path(@site.slug)} %>
