--- a/app/assets/stylesheets/layouts/management/l-page-creation.scss
+++ b/app/assets/stylesheets/layouts/management/l-page-creation.scss
@@ -22,43 +22,55 @@
     .inputs-container {
       width: 100%;
       max-width: 570px;
-      border: 1px solid $color-7;
 
-      label { display: none; }
+      > .container {
+        padding: 25px 35px;
+        border-top: 1px solid;
+        border-right: 1px solid;
+        border-left: 1px solid;
+        border-color: $color-7;
 
-      input {
-        display: block;
-        width: 100%;
-        margin: 0;
-        padding: 0 37px;
-        border: 0;
-        border-bottom: 1px solid $color-7;
-        color: $color-4;
+        &:last-of-type { border-bottom: 1px solid $color-7; }
 
-        &:first-of-type {
-          height: 130px;
-          font-size: $font-size-huge;
-          font-weight: $font-weight-light;
-          line-height: 130px;
+        label {
+          display: block;
+          margin-bottom: 10px;
+          font-size: $font-size-small;
+          font-weight: $font-weight-bold;
+          letter-spacing: .1px;
+          text-transform: uppercase;
         }
 
-        &:last-of-type {
-          height: 70px;
+        input {
+          display: block;
+          width: 100%;
+          margin: 0;
+          padding: 0;
+          border: 0;
+          color: $color-4;
           font-size: $font-size-s-normal;
-          line-height: 70px;
+          line-height: 1.5;
+        }
+
+        &.-big input {
+          font-size: $font-size-huge;
+          font-weight: $font-weight-light;
+        }
+
+        textarea {
+          width: 100%;
+          margin: 0;
+          padding: 0;
+          border: 0;
+          color: $color-4;
+          font-family: $font-family-1;
+          font-size: $font-size-s-normal;
+          line-height: 1.5;
         }
       }
 
-      textarea {
-        width: 100%;
-        margin: 0;
-        padding: 35px 37px;
-        border: 0;
-        border-bottom: 1px solid $color-7;
-        color: $color-4;
-        font-family: $font-family-1;
-        font-size: $font-size-s-normal;
-        line-height: 1.5;
+      > footer {
+        padding-top: 20px;
       }
     }
   }
