Creates the new inputs-container component
Moves the inputs' style of the page creation's title step to its own component for reuse.

--- a/app/views/management/page_steps/title.html.erb
+++ b/app/views/management/page_steps/title.html.erb
@@ -16,7 +16,7 @@
 <%= form_for @page, url: wizard_path, method: :put do |f| %>
   <div class="l-page-creation -title">
     <div class="wrapper">
-      <div class="inputs-container">
+      <div class="c-inputs-container">
         <div class="container -big">
           <%= f.label :name, 'Page title' %>
           <%= f.text_field :name, placeholder: 'My page' %>
