Mockup for users' creation

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -3,7 +3,7 @@
     <div class="wrapper">
       <h1>Users</h1>
       <ul class="action-buttons">
-        <li><%= link_to 'New user', new_admin_user_path, class: 'c-button' %></li>
+        <li><%= link_to 'New user', new_admin_user_step_path, class: 'c-button' %></li>
       </ul>
     </div>
   </div>
