--- a/app/assets/stylesheets/layouts/admin/l-user-creation.scss
+++ b/app/assets/stylesheets/layouts/admin/l-user-creation.scss
@@ -1,4 +1,4 @@
-.l-site-creation {
+.l-user-creation {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -38,7 +38,7 @@
       margin: 0 auto;
     }
 
-    .site-name {
+    .user-name {
       position: relative;
       width: 100%;
 
@@ -56,6 +56,30 @@
         font-weight: $font-weight-light;
         line-height: 150px;
         text-align: center;
+      }
+    }
+
+    .user-email {
+      position: relative;
+      width: 100%;
+
+      label {
+        position: absolute;
+        left: -10000px; // Keep it for accessibility
+      }
+
+      input {
+        width: 100%;
+        height: 50px;
+        padding: 0 20px;
+        border: 1px solid $color-7;
+        border-top: 0;
+        color: $color-5;
+        font-size: 14px;
+        letter-spacing: .1px;
+        line-height: 50px;
+        text-align: center;
+        text-transform: uppercase;
       }
     }
   }
