--- a/app/views/admin/user_steps/identity.html.erb
+++ b/app/views/admin/user_steps/identity.html.erb
@@ -2,14 +2,19 @@
 <%= Gon::Base.render_data(camel_case: true, camel_depth: 3) %>
 
 <%= form_for @user, url: wizard_path, method: :put do |f| %>
-  <div class="l-site-creation -name">
+  <div class="l-user-creation -name">
     <div class="wrapper">
-      <h1>Site name</h1>
-      <p class="intro">Please choose a name for the site and provide the list of all the URLs it can be accessed from.</p>
+      <h1>User name</h1>
+      <p class="intro">Please choose a name for the user and an email.</p>
 
       <div class="user-name">
         <%= f.label :name, for: 'name' %>
-        <%= f.text_field :name, id:'name', placeholder: 'Type here the site’s name' %>
+        <%= f.text_field :name, id:'name', placeholder: 'Type here the name' %>
+      </div>
+
+      <div class="user-email">
+        <%= f.label :email, for: 'email' %>
+        <%= f.text_field :email, id:'email', placeholder: 'Type here the email' %>
       </div>
 
       <div class="js-identity"></div>
