--- a/app/assets/stylesheets/layouts/admin/l-user-creation.scss
+++ b/app/assets/stylesheets/layouts/admin/l-user-creation.scss
@@ -84,61 +84,7 @@
     }
   }
 
-  &.-style {
-
-    .templates {
-      display: flex;
-      align-items: stretch;
-      justify-content: center;
-
-      .template {
-        position: relative;
-        margin: 10px;
-
-        input {
-          position: absolute;
-          left: -1000px;
-
-          &:not(:checked) + .content {
-            opacity: .3;
-          }
-        }
-
-        label {
-          display: block;
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          text-indent: -10000px; // We want to keep the text for accessibility
-          cursor: pointer;
-          z-index: 1; // Required to be positioned on top
-
-          &:hover + input + .content {
-            opacity: 1;
-          }
-        }
-
-        .content {
-          transition: .3s opacity;
-
-          img {
-            border: 1px solid $color-7;
-            border-radius: 7px;
-          }
-
-          p {
-            margin: 7px 0 0;
-            font-weight: $font-weight-bold;
-            text-transform: uppercase;
-          }
-        }
-      }
-    }
-  }
-
-  &.-settings {
+  &.-sites {
     .c-centered-input {
       justify-content: space-between;
       width: 400px;
@@ -146,7 +92,7 @@
     }
   }
 
-  &.-finish {
+  &.-context {
     display: flex;
     align-items: center;
     min-height: calc(100vh - 300px);
