--- a/app/views/admin/user_steps/identity.html.erb
+++ b/app/views/admin/user_steps/identity.html.erb
@@ -5,7 +5,7 @@
   <div class="l-user-creation -name">
     <div class="wrapper">
       <h1>User name</h1>
-      <p class="intro">Please choose a name for the user and an email.</p>
+      <p class="intro">Please choose a name and email for the user.</p>
 
       <div class="user-name">
         <%= f.label :name, for: 'name' %>
