--- a/app/assets/stylesheets/components/admin/c-users-list.scss
+++ b/app/assets/stylesheets/components/admin/c-users-list.scss
@@ -1,12 +1,14 @@
 .c-users-list,
-.c-role-list {
+.c-role-list,
+.c-site-list {
   display: flex;
   position: relative;
   flex-wrap: wrap;
   align-items: stretch;
 
   .user,
-  .role {
+  .role,
+  .site {
     position: relative;
     flex-basis: calc(33.33% - 20px);
     margin: 10px;
