--- a/app/assets/stylesheets/components/admin/c-users-list.scss
+++ b/app/assets/stylesheets/components/admin/c-users-list.scss
@@ -1,6 +1,7 @@
 .c-users-list,
 .c-role-list,
-.c-site-list {
+.c-site-list,
+.c-context-list {
   display: flex;
   position: relative;
   flex-wrap: wrap;
@@ -8,7 +9,8 @@
 
   .user,
   .role,
-  .site {
+  .site,
+  .context {
     position: relative;
     flex-basis: calc(33.33% - 20px);
     margin: 10px;
