--- a/app/views/admin/user_steps/contexts.html.erb
+++ b/app/views/admin/user_steps/contexts.html.erb
@@ -2,19 +2,21 @@
 <%= Gon::Base.render_data(camel_case: true, camel_depth: 3) %>
 
 <%= form_for @user, url: wizard_path, method: :put do |f| %>
-  <div class="l-user-creation -name">
+  <div class="l-user-creation -context">
     <div class="wrapper">
       <h1>User name</h1>
       <p class="intro">Please choose a name for the user and an email.</p>
 
-      <div class="user-name">
-        <%= f.label :name, for: 'name' %>
-        <%= f.text_field :name, id:'name', placeholder: 'Type here the name' %>
-      </div>
-
-      <div class="user-email">
-        <%= f.label :email, for: 'email' %>
-        <%= f.text_field :email, id:'email', placeholder: 'Type here the email' %>
+      <div class="c-context-list">
+        <% Site.all.each do |site| %>
+          <div class="context">
+            <label for="site-<%= site.id %>"><%= site.name %></label>
+            <div class="content">
+              <h3><%= site.name %></h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+            </div>
+          </div>
+        <% end %>
       </div>
 
       <div class="js-identity"></div>
