--- a/app/assets/stylesheets/layouts/admin/l-user-creation.scss
+++ b/app/assets/stylesheets/layouts/admin/l-user-creation.scss
@@ -85,6 +85,8 @@
   }
 
   &.-sites {
+    padding-bottom: 100px;
+
     .c-centered-input {
       justify-content: space-between;
       width: 400px;
@@ -97,7 +99,7 @@
     align-items: center;
     min-height: calc(100vh - 300px);
     padding-top: 50px;
-    padding-bottom: 0;
+    padding-bottom: 100px;
 
     > .wrapper {
       display: flex;
